--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   firebase_database: ^2.0.2
   firebase_core: any
   json_annotation: ^2.0.0
+  charts_flutter: ^0.6.0
+  http: ^0.12.0+1
+  xml: ^3.4.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -48,6 +51,8 @@ flutter:
   assets:
     - assets/logo.png
     - assets/price.png
+    - assets/whatsapp_main.png
+    - assets/call_main.png
     - assets/news.png
     - assets/installment.png
     - assets/shipping.png
@@ -69,6 +74,8 @@ flutter:
     - assets/bid/sms.png
     - assets/bid/whatsapp.png
     - assets/arrow/right_arrow.png
+    - assets/arrow/up_arrow.png
+    - assets/arrow/down_arrow.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
