--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   charts_flutter: ^0.6.0
   http: ^0.12.0+1
   xml: ^3.4.1
+  flutter_launcher_icons: "^0.7.0"
 dev_dependencies:
   flutter_test:
     sdk: flutter
