--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   http: ^0.12.0+1
   xml: ^3.4.1
   flutter_launcher_icons: "^0.7.0"
+  onesignal: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
