--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,12 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_database: ^2.0.2
   firebase_core: any
+  firebase_auth: 0.8.2
   json_annotation: ^2.0.0
   charts_flutter: ^0.6.0
   http: ^0.12.0+1
   xml: ^3.4.1
   flutter_launcher_icons: "^0.7.0"
-  onesignal: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
