--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   http: ^0.12.0+1
   xml: ^3.4.1
   flutter_launcher_icons: "^0.7.0"
+  shared_preferences: ^0.5.1+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
