--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   firebase_auth: 0.8.2
   json_annotation: ^2.0.0
   charts_flutter: ^0.6.0
+  fluttertoast: ^3.0.3
   http: ^0.12.0+1
   xml: ^3.4.1
   flutter_launcher_icons: "^0.7.0"
